'Update App' => 'Upgrade App' to match what we call it on the linked page

--- a/templates/project.html
+++ b/templates/project.html
@@ -174,7 +174,7 @@ h3.question-group-title {
     {% if can_upgrade_app %}
       <a id="upgrade-app" class="btn btn-sm" href="{{project.get_absolute_url}}/upgrade">
         <i class="glyphicon glyphicon-download"></i>
-        Update App
+        Upgrade App
       </a>
     {% endif %}
 
