--- a/templates/authoring-tool-modal.html
+++ b/templates/authoring-tool-modal.html
@@ -10,7 +10,14 @@
       <div class="modal-body">
         <form class="form-horizontal" onsubmit="return false;">
           <div class="form-group">
-            <label for="authoring_tool_mspec" class="col-sm-2 control-label">Specification</label>
+            <label for="authoring_tool_catalog_metadata" class="col-sm-2 control-label">App</label>
+            <div class="col-sm-10">
+              <textarea class="form-control" id="authoring_tool_catalog_metadata" name="catalog_metadata">{ }</textarea>
+              <span class="help-block">Compliance app catalog information in YAML.</span>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="authoring_tool_mspec" class="col-sm-2 control-label">Module</label>
             <div class="col-sm-10">
               <textarea class="form-control" id="authoring_tool_mspec" name="spec">{ }</textarea>
               <span class="help-block">Module definition in YAML.</span>
