catch module validation errors when starting apps and show them in the UI, and add a check that modules have a 'title' field which is assumed to exist throughout Q

--- a/templates/app-store-item.html
+++ b/templates/app-store-item.html
@@ -39,6 +39,11 @@
 <div class="row">
   <div class="col-sm-9 col-sm-push-3">
     <h1><small>{{app.vendor}}</small><br/>{{app.title}}</h1>
+
+    {% if error %}
+      <p class="text-danger">{{error}}</p>
+    {% endif %}
+
     <div class="body">
       {{app.description.long|safe}}
     </div>
