--- a/templates/projects.html
+++ b/templates/projects.html
@@ -89,7 +89,7 @@ Your Compliance Projects
 <div style="float: right; margin: 0 0.5em 0em 5em;">
   <a id="new-system" href="/store?protocol=govready.com/apps/compliance/2018/information-technology-system" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add system </a>
   <a id="new-project" href="/store" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add other app </a>
-  {% if is_lonely_admin %}
+  {% if can_invite_to_org %}
   <a href="#" onclick="show_invite_to_org(); return false;" class="btn btn-success"><i class="glyphicon glyphicon-send"></i> Invite colleague </a>
   {% endif %}
 </div>
@@ -179,7 +179,7 @@ $(function() {
   });
 })
 
-{% if is_lonely_admin %}
+{% if can_invite_to_org %}
 function show_invite_to_org() {
   show_invite_modal(
     'Invite To {{request.organization.name|escapejs}}',
