--- a/templates/project-list-answers.html
+++ b/templates/project-list-answers.html
@@ -104,7 +104,6 @@ h2 { margin-top: 1.5em; }
                 {% for key, label in review_choices %}
                 <span
                   class="label {% if answer.reviewed != key %}inactive{% endif %} task-{{section.task.id}}-answer-{{question.key}}-review-{{key}}"
-                  data-task="{{section.task.get_absolute_url}}"
                   data-taskid="{{section.task.id}}"
                   data-question="{{question.id}}"
                   data-answer="{{answer.id}}"
@@ -158,12 +157,10 @@ function change_review_state(elem, can_review) {
   // Save new review state.
   var new_state = elem.attr('data-reviewed');
   ajax_with_indicator({
-      url: elem.attr('data-task') + "/_save",
+      url: "/tasks/_update_reviewed_state",
       method: "POST",
       data: {
-        question: elem.attr('data-question'), {# database id #}
         answer: elem.attr('data-answer'), {# TaskAnswerHistory id #}
-        method: "review",
         reviewed: new_state
       },
       success: function() {
