compliance apps catalog now reads from the database rather than going to remote repositories
* AppVersion now has a boolean field for whether the instance should be included in the compliance apps catalog for users to start new projects with that app.
* The AppSource admin now lists all of the apps provided by the source and has links to import new app versions into the database and to see the app versions already in the database by version number.
* When starting a compliance app (i.e. creating a new project), we no longer have to import the app from the remote repository --- instead, we create a new Project and set its root_task to point to a Module in an AppVersion already in the database.
* App loading is refactored in a few places. The routines for getting app catalog information from the remote app data are removed since now we only need it for apps already stored in the database.
* The AppSource admin's approved app lists form is removed since adding apps into the database is now an administrative function and the database column for it is dropped.
* Tests now load into the database the apps they need.
* The app catalog cache is removed since the page loads much faster.

--- a/templates/app-store-item.html
+++ b/templates/app-store-item.html
@@ -50,8 +50,8 @@
   </div>
   <div class="col-sm-3 col-sm-pull-9">
     <div style="padding-right: 1em">
-      {% if app.app_icon_dataurl %}
-        <img src="{{app.app_icon_dataurl}}" style="width: 100%;">
+      {% if app.icon %}
+        <img src="{{app.icon}}" style="width: 100%;">
       {% endif %}
 
       <form method="post" style="margin: 1em; text-align: center;">
