--- a/templates/app-store.html
+++ b/templates/app-store.html
@@ -184,9 +184,9 @@ h2 {
           </div>
         </td>
 
-        {% if app.app_icon_dataurl %}
+        {% if app.icon %}
         <td class="app-icon" style="padding-top: 1px; padding-right: 12px;">
-          <img src="{{app.app_icon_dataurl}}" class="img-responsive"">
+          <img src="{{app.icon}}" class="img-responsive"">
         </td>
         {% endif %}
 
@@ -211,21 +211,12 @@ h2 {
 </div> <!--/.app-category-->
 
 {% empty %}
-  {% if error %}
-    <p class="text-danger">{{error}}</p>
-  {% elif request.GET.q %}
+  {% if request.GET.q %}
     <p>There are currently no apps available that can be used to complete that question, sorry!</p>
   {% else %}
     <p>There are no AppSources configured by this site&rsquo;s administrator that provide any apps, sorry!</p>
   {% endif %}
 {% endfor %}
-
-{% if can_clear_catalog_cache %}
-<form style="margin: 30px 0;" method="post">
-  {% csrf_token %}
-  <button class="btn btn-warning pull-right">Clear App Catalog Cache</button>
-</form>
-{% endif %}
 
 {% endblock %}
 
