--- a/templates/project-startapps.html
+++ b/templates/project-startapps.html
@@ -66,9 +66,9 @@
           <div class="app {% if forloop.first %}active{% endif %}" data-app-key="{{app.key}}">
             <table>
               <tr valign="top">
-                {% if app.app_icon_dataurl %}
+                {% if app.icon %}
                   <td class="app-icon" style="padding-top: 1px; padding-right: 12px;">
-                    <img src="{{app.app_icon_dataurl}}" class="img-responsive"">
+                    <img src="{{app.icon}}" class="img-responsive"">
                   </td>
                 {% endif %}
                 <td>
