the compliance apps list on the admin wasn't working for local directories
Reading the app version raised "attempt to use closed filesystem" because we were reading the app YAML outside of the with-block that opened the 'connection' to the 'remote' app data. Now we pre-load all of the data we need prior to rendering the template.

--- a/templates/admin/guidedmodules/appsource/change_form.html
+++ b/templates/admin/guidedmodules/appsource/change_form.html
@@ -20,17 +20,15 @@
             <tr>
                 <td>{{app.name}}</td>
                 <td>
-                    {% with v=app.get_new_version_number %}
-                        {% if v %}
-                            {{v}}
-                            [<a href="../../import-app/{{original.id}}/{{app.name}}">Add</a>]
-                        {% else %}
-                            -
-                        {% endif %}
-                    {% endwith %}
+                    {% if app.new_version_number %}
+                        {{app.new_version_number}}
+                        [<a href="../../import-app/{{original.id}}/{{app.name}}">Add</a>]
+                    {% else %}
+                        -
+                    {% endif %}
                 </td>
                 <td>
-                    {% for appver in app.get_appversions %}
+                    {% for appver in app.versions_in_catalog %}
                         <a href="/admin/guidedmodules/appversion/{{appver.id}}/">
                             {{appver.get_version_display}}
                         </a>
@@ -40,7 +38,7 @@
                     {% endfor %}
                 </td>
                 <td>
-                    {% for appver in app.get_hidden_appversions %}
+                    {% for appver in app.hidden_versions %}
                         <a href="/admin/guidedmodules/appversion/{{appver.id}}/">
                             {{appver.get_version_display}}
                         </a>
