--- a/templates/question.html
+++ b/templates/question.html
@@ -465,10 +465,6 @@ label:hover .onhover { display: inline; }
                         <span class="emoji" data-sprite="people" data-code="1f64b" data-name="person raising hand"></span>
                         It doesn&rsquo;t apply
                     </button>
-                    <button id="not-now-button" type=button>
-                        <span class="emoji" data-sprite="objects" data-code="1f4cd" data-name="round_pushpin"></span>
-                        I&rsquo;ll come back
-                    </button>
                     <button id="not-sure-button" type=button>
                         <span class="emoji"  data-sprite="people" data-code="1f914" data-name="thinking face"></span>
                         Not sure
@@ -648,10 +644,10 @@ $(function() {
 
     function update_save_button_enabled() {
       // The save button is enabled just when the input is valid
-      // and Don't Know, Doesn't Apply, Not Now aren't active (if they
+      // and Don't Know/Doesn't Apply aren't active (if they
       // are, the answer inputs aren't used).
       var ok = (typeof validate_answer()) == "undefined";
-      if ($('#no-idea-button').hasClass('active') || $('#not-applicable-button').hasClass('active') || $('#not-now-button').hasClass('active'))
+      if ($('#no-idea-button').hasClass('active') || $('#not-applicable-button').hasClass('active'))
         ok = true;
       $('#save-button').prop('disabled', !ok);
     }
@@ -836,14 +832,14 @@ $(function() {
         window.inputctrl_quill.focus();
       {% endif %}
 
-      {# If the question was skipped, set the right skip button state. #}
+      {# If the question was skipped, set the right skip button state, but if there is something in the database we dont recognize here just fall back to dont-know. #}
       {% if answer_obj.skipped_reason %}
         {% if answer_obj.skipped_reason == "dont-know" %}
           $('#no-idea-button').addClass('active');
         {% elif answer_obj.skipped_reason == "doesnt-apply" %}
           $('#not-applicable-button').addClass('active');
         {% else %}
-          $('#not-now-button').addClass('active');
+          $('#no-idea-button').addClass('active');
         {% endif %}
         disable_form(true);
       {% endif %}
@@ -868,15 +864,14 @@ $(function() {
       });
     $('#confidence-buttons button:not([data-toggleable=false])')
       .click(function() {
-        // Don't Know, Doesn't Apply, and Not Now
+        // Don't Know/Doesn't Apply
         // are mutually exclusive with the user
         // also providing an answer. If they typed
         // anything into a text field, or any field
         // that is resettable (e.g. radios aren't)
         // then show a message and stop.
         if (($(this).attr('id') == "no-idea-button"
-              || $(this).attr('id') == "not-applicable-button"
-              || $(this).attr('id') == "not-now-button")
+              || $(this).attr('id') == "not-applicable-button")
             && user_has_entered_clearable_answer()) {
           show_modal_error(
             "",
@@ -888,19 +883,16 @@ $(function() {
 
         $(this).toggleClass('active');
         if ($(this).hasClass('active')) {
-            // Don't Know, Doesn't Apply, and Not Now
-            // are mutually exclusive.
+            // Don't Know/Doesn't Apply are mutually exclusive.
             if ( $(this).attr('id') == "no-idea-button"
-              || $(this).attr('id') == "not-applicable-button"
-              || $(this).attr('id') == "not-now-button")
-                $('#no-idea-button, #not-applicable-button, #not-now-button, #not-sure-button')
+              || $(this).attr('id') == "not-applicable-button")
+                $('#no-idea-button, #not-applicable-button')
                   .filter(":not([id=" + $(this).attr('id') + "])")
                   .removeClass('active');
         }
 
-        // Controls are disabled when Don't Know, Doesn't Apply, or Not Now
-        // are selected.
-        disable_form($('#no-idea-button').hasClass('active') || $('#not-applicable-button').hasClass('active') || $('#not-now-button').hasClass('active'));
+        // Controls are disabled when Don't KnowDoesn't Apply are selected.
+        disable_form($('#no-idea-button').hasClass('active') || $('#not-applicable-button').hasClass('active'));
         update_save_button_enabled();
       });
 
@@ -924,12 +916,6 @@ $(function() {
             // apply to the user's circumstances.
             form.find('input[name=method]').val('skip');
             form.find('input[name=skipped_reason]').val('doesnt-apply');
-
-          } else if ($('#not-now-button').hasClass('active')) {
-            // Skipping this question because the user wants to come
-            // back later.
-            form.find('input[name=method]').val('skip');
-            form.find('input[name=skipped_reason]').val('come-back');
 
           } else {
             // Saving the answer. Run client-side validation, and block
