--- a/templates/settings.html
+++ b/templates/settings.html
@@ -38,7 +38,7 @@ GovReady-Q Setup
   {% endif %}
 
   {# Link to the 'organization project' which is a Task that has questions about the organization. #}
-  {% if can_see_org_settings %}
+  {% if request.user.can_see_org_settings %}
   <h2 style="margin-top: 3em;">Organization Profile</h2>
 
   <p>
