remove checks that resources specified by ID in URLs are actually a part of the organization whose site is being accessed
These checks prevented resources from the wrong tenant organization showing up via a carefully crafed URL.

This is a part of removing the multi-tenancy feature. Without multi-tenancy, there won't be an organization associated with each request, so the check won't be valid. Since these checks are all similar and easy to understand, I'm removing them in one commit together.

--- a/templates/project-api.html
+++ b/templates/project-api.html
@@ -44,7 +44,7 @@ API
 
     <pre>curl \
       --header "Authorization: <i>your-api-key</i>" \
-      {{SITE_ROOT_URL}}/api/v1/organizations/{{request.organization.subdomain}}/projects/{{project.id}}/answers</pre>
+      {{SITE_ROOT_URL}}/api/v1/projects/{{project.id}}/answers</pre>
 
 
     <!-- -->
@@ -75,7 +75,7 @@ API
     <pre>curl \
       --header "Authorization: <i>your-api-key</i>" \
       {% for key, value in sample_post_keyvalue %}-F "{{key}}={% if value != "<binary file content>" %}{{value}}{% else %}@filename.ext{% endif %}" \
-      {% endfor %}{{SITE_ROOT_URL}}/api/v1/organizations/{{request.organization.subdomain}}/projects/{{project.id}}/answers</pre>
+      {% endfor %}{{SITE_ROOT_URL}}/api/v1/projects/{{project.id}}/answers</pre>
 
     <p>(<code>curl</code>&rsquo;s <code>-d</code> option can be used in place of <code>-F</code> if none of the fields are file uploads.)
 
@@ -117,7 +117,7 @@ API
       --header "Authorization: <i>your-api-key</i>" \
       -XPOST --data @data.json \
       --header "Content-Type: application/json" \
-      {{SITE_ROOT_URL}}/api/v1/organizations/{{request.organization.subdomain}}/projects/{{project.id}}/answers</pre>
+      {{SITE_ROOT_URL}}/api/v1/projects/{{project.id}}/answers</pre>
 
     <h2>Data Schema</h2>
 
